src/uri.cpp

#line 1 "src/uri.rl"
#include "uri.h"

namespace bifang
{


#line 10 "src/uri.cpp"
static const int uri_parser_start = 231;
static const int uri_parser_first_final = 231;
static const int uri_parser_error = 0;

static const int uri_parser_en_main = 231;


#line 115 "src/uri.rl"



// static
Uri::ptr Uri::create(const std::string& uristr)
{
    Uri::ptr uri(new Uri);
    std::string t_uristr;
    t_uristr.resize(uristr.size());
    std::transform(uristr.begin(), uristr.end(), t_uristr.begin(), ::tolower);
    int cs = 0;
    const char* mark = 0;
    
#line 32 "src/uri.cpp"
	{
	cs = uri_parser_start;
	}

#line 128 "src/uri.rl"
    const char *p = t_uristr.c_str();
    const char *pe = p + t_uristr.size();
    const char* eof = pe;
    
#line 42 "src/uri.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 231:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr234;
		case 37: goto st3;
		case 47: goto tr236;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto tr237;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( (*p) > 32 ) {
			if ( 65 <= (*p) && (*p) <= 90 )
				goto tr238;
		} else if ( (*p) >= 0 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( (*p) > 122 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 97 )
			goto tr238;
	} else
		goto st0;
	goto st232;
st232:
	if ( ++p == pe )
		goto _test_eof232;
case 232:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr234;
		case 37: goto st3;
		case 47: goto tr239;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto tr237;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st232;
st0:
cs = 0;
	goto _out;
tr234:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr243:
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr247:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 48 "src/uri.rl"
	{
        uri->setQuery(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr249:
#line 48 "src/uri.rl"
	{
        uri->setQuery(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr254:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr265:
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr269:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
tr273:
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st233;
st233:
	if ( ++p == pe )
		goto _test_eof233;
case 233:
#line 202 "src/uri.cpp"
	switch( (*p) ) {
		case 37: goto tr241;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto tr240;
tr240:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st234;
st234:
	if ( ++p == pe )
		goto _test_eof234;
case 234:
#line 230 "src/uri.cpp"
	switch( (*p) ) {
		case 37: goto st1;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto st234;
tr241:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 258 "src/uri.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st234;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st234;
	} else
		goto st234;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st232;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st232;
	} else
		goto st232;
	goto st0;
tr239:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st235;
tr256:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st235;
tr266:
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st235;
tr270:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st235;
tr274:
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st235;
st235:
	if ( ++p == pe )
		goto _test_eof235;
case 235:
#line 357 "src/uri.cpp"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr243;
		case 37: goto st5;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto tr245;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st235;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st6;
	} else
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st235;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st235;
	} else
		goto st235;
	goto st0;
tr237:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
tr245:
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
tr262:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
tr268:
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
tr272:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
tr276:
#line 40 "src/uri.rl"
	{
        if (p != mark)
        {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 17 "src/uri.rl"
	{ mark = p; }
#line 35 "src/uri.rl"
	{
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st236;
st236:
	if ( ++p == pe )
		goto _test_eof236;
case 236:
#line 485 "src/uri.cpp"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr247;
		case 37: goto tr248;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto tr246;
tr246:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st237;
st237:
	if ( ++p == pe )
		goto _test_eof237;
case 237:
#line 512 "src/uri.cpp"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr249;
		case 37: goto st7;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st237;
tr248:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 539 "src/uri.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st237;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st237;
	} else
		goto st237;
	goto st0;
tr236:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st238;
st238:
	if ( ++p == pe )
		goto _test_eof238;
case 238:
#line 570 "src/uri.cpp"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr243;
		case 37: goto st5;
		case 47: goto st239;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto tr245;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st235;
st239:
	if ( ++p == pe )
		goto _test_eof239;
case 239:
	switch( (*p) ) {
		case 2: goto tr252;
		case 33: goto tr253;
		case 35: goto tr254;
		case 37: goto tr255;
		case 47: goto tr256;
		case 48: goto tr257;
		case 49: goto tr258;
		case 50: goto tr259;
		case 58: goto tr261;
		case 59: goto tr253;
		case 61: goto tr253;
		case 63: goto tr262;
		case 64: goto tr263;
		case 91: goto tr264;
		case 95: goto tr253;
		case 126: goto tr253;
	}
	if ( (*p) < 51 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr253;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr253;
		} else if ( (*p) >= 65 )
			goto tr253;
	} else
		goto tr260;
	goto st0;
tr252:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 633 "src/uri.cpp"
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 2: goto st13;
		case 48: goto st15;
		case 49: goto st27;
		case 50: goto st29;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st28;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 46 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 2: goto st17;
		case 48: goto st19;
		case 49: goto st23;
		case 50: goto st25;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st24;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 46 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 2: goto st21;
		case 48: goto st240;
		case 49: goto st243;
		case 50: goto st245;
	}
	if ( 51 <= (*p) && (*p) <= 57 )
		goto st244;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( 48 <= (*p) && (*p) <= 52 )
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st240;
	goto st0;
st240:
	if ( ++p == pe )
		goto _test_eof240;
case 240:
	switch( (*p) ) {
		case 35: goto tr265;
		case 47: goto tr266;
		case 58: goto tr267;
		case 63: goto tr268;
	}
	goto st0;
tr287:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st241;
tr267:
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st241;
st241:
	if ( ++p == pe )
		goto _test_eof241;
case 241:
#line 777 "src/uri.cpp"
	switch( (*p) ) {
		case 35: goto tr269;
		case 47: goto tr270;
		case 63: goto tr272;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr271;
	goto st0;
tr271:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st242;
st242:
	if ( ++p == pe )
		goto _test_eof242;
case 242:
#line 794 "src/uri.cpp"
	switch( (*p) ) {
		case 35: goto tr273;
		case 47: goto tr274;
		case 63: goto tr276;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st242;
	goto st0;
st243:
	if ( ++p == pe )
		goto _test_eof243;
case 243:
	switch( (*p) ) {
		case 35: goto tr265;
		case 47: goto tr266;
		case 58: goto tr267;
		case 63: goto tr268;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st244;
	goto st0;
st244:
	if ( ++p == pe )
		goto _test_eof244;
case 244:
	switch( (*p) ) {
		case 35: goto tr265;
		case 47: goto tr266;
		case 58: goto tr267;
		case 63: goto tr268;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st240;
	goto st0;
st245:
	if ( ++p == pe )
		goto _test_eof245;
case 245:
	switch( (*p) ) {
		case 35: goto tr265;
		case 47: goto tr266;
		case 53: goto st246;
		case 58: goto tr267;
		case 63: goto tr268;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st240;
	goto st0;
st246:
	if ( ++p == pe )
		goto _test_eof246;
case 246:
	switch( (*p) ) {
		case 35: goto tr265;
		case 47: goto tr266;
		case 58: goto tr267;
		case 63: goto tr268;
	}
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st240;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 46: goto st20;
		case 53: goto st26;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st19;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 46: goto st16;
		case 53: goto st30;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 53 )
		goto st15;
	goto st0;
tr253:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st247;
st247:
	if ( ++p == pe )
		goto _test_eof247;
case 247:
#line 940 "src/uri.cpp"
	switch( (*p) ) {
		case 33: goto st247;
		case 35: goto tr265;
		case 37: goto st31;
		case 47: goto tr266;
		case 58: goto tr279;
		case 61: goto st247;
		case 63: goto tr268;
		case 64: goto tr38;
		case 95: goto st247;
		case 126: goto st247;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st247;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st247;
	} else
		goto st247;
	goto st0;
tr255:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 970 "src/uri.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st32;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st32;
	} else
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st247;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st247;
	} else
		goto st247;
	goto st0;
tr261:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st248;
tr279:
#line 30 "src/uri.rl"
	{
        uri->setHost(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st248;
st248:
	if ( ++p == pe )
		goto _test_eof248;
case 248:
#line 1013 "src/uri.cpp"
	switch( (*p) ) {
		case 33: goto st33;
		case 35: goto tr269;
		case 37: goto st34;
		case 47: goto tr270;
		case 61: goto st33;
		case 63: goto tr272;
		case 64: goto tr38;
		case 95: goto st33;
		case 126: goto st33;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr280;
		} else if ( (*p) >= 36 )
			goto st33;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st33;
		} else if ( (*p) >= 65 )
			goto st33;
	} else
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 33: goto st33;
		case 37: goto st34;
		case 61: goto st33;
		case 64: goto tr38;
		case 95: goto st33;
		case 126: goto st33;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st33;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st33;
		} else if ( (*p) >= 65 )
			goto st33;
	} else
		goto st33;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st35;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st35;
	} else
		goto st35;
	goto st0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st33;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st33;
	} else
		goto st33;
	goto st0;
tr38:
#line 25 "src/uri.rl"
	{
        uri->setUserinfo(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st249;
tr263:
#line 17 "src/uri.rl"
	{ mark = p; }
#line 25 "src/uri.rl"
	{
        uri->setUserinfo(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st249;
st249:
	if ( ++p == pe )
		goto _test_eof249;
case 249:
#line 1110 "src/uri.cpp"
	switch( (*p) ) {
		case 2: goto tr252;
		case 33: goto tr281;
		case 35: goto tr254;
		case 37: goto tr282;
		case 47: goto tr256;
		case 48: goto tr283;
		case 49: goto tr284;
		case 50: goto tr285;
		case 58: goto tr287;
		case 59: goto tr281;
		case 61: goto tr281;
		case 63: goto tr262;
		case 91: goto tr264;
		case 95: goto tr281;
		case 126: goto tr281;
	}
	if ( (*p) < 51 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr281;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr281;
		} else if ( (*p) >= 65 )
			goto tr281;
	} else
		goto tr286;
	goto st0;
tr281:
#line 17 "src/uri.rl"
	{ mark = p; }
	goto st250;
st250:
	if ( ++p == pe )
		goto _test_eof250;
case 250:
#line 1148 "src/uri.cpp"
	switch( (*p) ) {
		case 33: goto st250;
		case 35: goto tr265;
		case 37: goto st36;
		case 47: goto tr266;
		case 58: goto tr267;
		case 61: goto st250;
		case 63: goto tr268;
		case 95: goto st250;
		case 126: goto st250;
	}
